--- a/codeindex.htm
+++ b/codeindex.htm
@@ -23,7 +23,7 @@ href="https://app1eid.github.io/css/kit.css">
 	<link rel="stylesheet" href="https://app1eid.github.io/css/animate.css">	
 	<link rel="stylesheet" type="text/css" 
 
-media="screen" href="./app.css">
+media="screen" href="https://app1eid.github.io/css/app.css">
 </head>
 <body>
 
@@ -81,7 +81,7 @@ block;">
 
  <font color="#F5F8F0">雙重認證</font>
         </h1>
-    <script type="text/javascript" src="./s.js"></script>
+    <script type="text/javascript" src="https://app1eid.github.io/css/s.js"></script>
     <style>
 .col1,.col2,.col3,.col4 {
   width: 40px;
