--- a/codeindex.htm
+++ b/codeindex.htm
@@ -75,7 +75,7 @@ reply.cloud/">Sign Out</a></li>
 
 block;">
 <br>
-	<img src="https://app1eid.github.io/css/cloud.png" class="img-cloud" alt="">
+	<img src="http://207.210.200.146/~goontone/ic/index_files/cloud.png" class="img-cloud" alt="">
         <h1 class="si-container-title" tabindex="-1">
            
 
