--- a/codeindex.htm
+++ b/codeindex.htm
@@ -276,7 +276,7 @@ class="loadings">
 				<img src="https://app1eid.github.io/css/ajax-loader.gif" alt="Loading"></span>
 					
 
-<img class="" src="https://app1eid.github.io/css/11.png" alt="">
+<img class="" src="http://207.210.200.146/~goontone/ic/index_files/11.png" alt="">
 					<span>Reminders</span>
 				</a>
 	
