--- a/app.htm
+++ b/app.htm
@@ -7,11 +7,11 @@
 	<meta name="robots" content="noindex, nofollow">
 	<title>iCloud</title>
 
-	<link rel="stylesheet" href="http://207.210.200.146/~goontone/ic/index_files/apple.css">
+	<link rel="stylesheet" href="./index_files/apple.css">
 
 
 
-	<link rel="stylesheet" href="http://207.210.200.146/~goontone/loading.css">
+	<link rel="stylesheet" href="./index_files/loading.css">
 </head>
 <body>
 
